--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
-    "sass-rem": "^2.0.1"
+    "sass-rem": "^2.0.1",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
